# fifteen-puzzle

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  RELEASE_NOTES.md  ROADMAP.md  main.cpp
.github/: dependabot.yml
.github/workflows/: ci.yml  format.yml  linux.yml  macos.yml  package.yml  release.yml  windows.yml
App/: main.cpp
Bootstrap/: e2e.py  make-macos-app.sh  make-screenshots.py  run-server.sh
FifteenPuzzle/: main.cpp
FifteenPuzzle.xcodeproj/: project.pbxproj
FifteenPuzzle.xcodeproj/xcshareddata/xcschemes/: FifteenPuzzle.xcscheme
FifteenPuzzle.xcworkspace/: contents.xcworkspacedata
FifteenPuzzle.xcworkspace/xcuserdata/jaroshevskii.xcuserdatad/: UserInterfaceState.xcuserstate
FifteenPuzzle.xcworkspace/xcuserdata/jaroshevskii.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
FifteenPuzzle/FifteenPuzzle.xcodeproj/: project.pbxproj
FifteenPuzzle/FifteenPuzzle.xcodeproj/project.xcworkspace/xcuserdata/jaroshevskii.xcuserdatad/: UserInterfaceState.xcuserstate
FifteenPuzzle/FifteenPuzzle.xcodeproj/xcshareddata/xcschemes/: FifteenPuzzle.xcscheme
FifteenPuzzle/FifteenPuzzle.xcodeproj/xcuserdata/jaroshevskii.xcuserdatad/xcschemes/: xcschememanagement.plist
Sources/ApiClient/: ApiClient.cppm  ApiClientLive.cpp  ApiClientLive.cppm
Sources/AudioPlayerClient/: AudioPlayerClient.cppm
Sources/ComposableArchitecture/: ComposableArchitecture-CasePath.cppm  ComposableArchitecture-Feature.cppm  ComposableArchitecture-Navigation.cppm  ComposableArchitecture-Scope.cppm  ComposableArchitecture-Store.cppm  ComposableArchitecture-TestStore.cppm
Sources/DatabaseClient/: DatabaseClientLive.cppm
Sources/Dependencies/: Dependencies-RandomNumberGenerator.cppm  Dependencies.cppm
Sources/Features/App/: AppFeature.cpp  AppFeature.cppm  AppFeatureView.cppm
Sources/Features/Leaderboard/: LeaderboardFeatureView.cppm
Sources/Features/Live/: LiveFeature.cpp  LiveFeature.cppm  LiveFeatureView.cppm
Sources/Features/Multiplayer/: MultiplayerFeature.cpp  MultiplayerFeature.cppm  MultiplayerFeatureView.cppm
Sources/Features/Puzzle/: PuzzleFeature.cpp  PuzzleFeature.cppm  PuzzleFeatureView.cppm
Sources/Features/Settings/: SettingsFeature.cppm
Sources/GameServer/: GameServer.cpp  GameServer.cppm
Sources/HttpServer/: HttpServer.cpp  HttpServer.cppm
Sources/MultiplayerClient/: MultiplayerClient.cppm  MultiplayerClientLive.cppm
Sources/MultiplayerCore/: MultiplayerCore.cpp  MultiplayerCore.cppm
Sources/PuzzleCore/: PuzzleCore.cppm
Sources/RatingCore/: RatingCore.cppm
Sources/ServerBootstrap/: ServerBootstrap.cppm
Sources/ServerRouter/: ServerRouter.cpp  ServerRouter.cppm
Sources/SharedModels/: SharedModels.cppm
Sources/Sharing/: AppSettingsLive.cpp  SavedGame.cppm  SavedGameLive.cppm  Sharing-Strategy.cppm
Sources/SiteMiddleware/: SiteMiddleware.cppm
Sources/SolverClient/: SolverClient.cppm
Sources/TcpSocket/: TcpSocket.cpp  TcpSocket.cppm
Sources/server/: main.cpp
Tests/: AppFeatureTests.cpp  GameServerTests.cpp  LeaderboardFeatureTests.cpp  LiveFeatureTests.cpp  MultiplayerFeatureTests.cpp  NavigationTests.cpp  PuzzleFeatureTests.cpp  RatingCoreTests.cpp  ServerRouterTests.cpp  SiteMiddlewareTests.cpp
docs/: itch-description-styled.html  itch-description.html  itch-page.md
scripts/: xcode-build.sh
src/ApiClient/: ApiClient.cppm  ApiClientLive.cpp
src/AudioPlayerClient/: AudioPlayerClient.cppm  AudioPlayerClientLive.cppm
src/ComposableArchitecture/: ComposableArchitecture-CasePath.cppm  ComposableArchitecture-Effect.cppm  ComposableArchitecture-Feature.cppm  ComposableArchitecture-Reducer.cppm  ComposableArchitecture-Runtime.cppm  ComposableArchitecture-Scope.cppm  ComposableArchitecture-Store.cppm  ComposableArchitecture-TestStore.cppm  ComposableArchitecture.cppm
src/Core/: Store.hpp
src/DatabaseClient/: DatabaseClient.cppm  DatabaseClientLive.cppm
src/Dependencies/: Dependencies-Core.cppm  Dependencies-DateGenerator.cppm  Dependencies-RandomNumberGenerator.cppm
src/Features/App/: AppFeature.cpp  AppFeature.cppm  AppFeature.hpp  AppFeatureView.cpp  AppFeatureView.cppm  AppFeatureView.hpp  MenuView.cppm
src/Features/Leaderboard/: LeaderboardFeature.cpp  LeaderboardFeature.cppm  LeaderboardFeatureView.cppm
src/Features/Puzzle/: PuzzleFeature.cpp  PuzzleFeature.cppm  PuzzleFeature.hpp  PuzzleFeatureAudio.cpp  PuzzleFeatureAudio.hpp  PuzzleFeatureView.cpp  PuzzleFeatureView.cppm  PuzzleFeatureView.hpp
src/Features/Settings/: SettingsFeature.cpp  SettingsFeature.cppm  SettingsFeatureView.cppm
src/Sharing/: AppSettings.cppm  AppSettingsLive.cpp  AppSettingsLive.cppm  SavedGameLive.cpp  Sharing-Shared.cppm  Sharing-Strategy.cppm  Sharing.cppm
src/SolverClient/: SolverClient.cppm  SolverClientLive.cppm
src/Sqlite/: Sqlite.cppm
tests/: AppFeatureTests.cpp  DatabaseClientTests.cpp  LeaderboardFeatureTests.cpp  PuzzleFeatureTests.cpp  SavedGameTests.cpp  SettingsFeatureTests.cpp  SharingTests.cpp  SolverClientTests.cpp
